[package]
name = "gym-snake-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gym_snake_rs"
crate-type = ["cdylib"]

[[bin]]
name = "gym-snake-rs-bin"  # Different name to avoid collision
path = "src/main.rs"

[[bin]]
name = "engine"
path = "src/engine.rs"

[dependencies]
pyo3 = ">=0.25.0"
piston = ">=1.0.0"
piston2d-graphics = ">=0.44.0"
pistoncore-glutin_window = ">=0.72.0"
piston2d-opengl_graphics = ">=0.85.0"
piston_window = "0.132.0"
rand = "0.9.1"
